# jobflow

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  REALEASING_JOBFLOW.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot-bot.yml  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: deploy.yml  deps.yml  docs.yml  docs_manual.yml  joss-pdf.yml  link-check.yml  lint.yml  release.yml  testing.yml  tests.yml  update-precommit.yml
docs/: changelog.rst  conf.py  contributing.rst  contributors.rst  graph.viz  index.rst  install_fireworks.md  jobflow.core.rst  jobflow.managers.rst  jobflow.settings.rst  jobflow.utils.rst  stores.md  tutorials.rst
docs/_templates/: breadcrumbs.html
docs/admin/: version-releases.md
docs/src/: activities.core.rst  activities.managers.fireworks.rst  activities.managers.rst  activities.rst  activities.utils.rst  activity.rst  changelog.rst  conf.py  contributing.rst  contributors.rst  flow.rst  flows.core.rst  flows.managers.rst  flows.rst  flows.utils.rst  ifermi.rst  index.rst  install.rst  introduction.rst  job.rst  jobflow.core.rst  jobflow.managers.rst  jobflow.rst  jobflows.utils.rst  license.rst  maker.rst  modules.rst  task-api.rst  task.rst  tutorials.rst
docs/src/_static/: custom.css
docs/src/tutorials/: 1-quickstart.nblink  1-quickstart.rst  2-defining-jobs.rst  2-introduction.nblink  3-defining-jobs.nblink  4-creating-flows.rst  5-dynamic-flows.rst  6-fireworks.rst
docs/tutorials/: 1-quickstart.ipynb  1-quickstart.nblink  2-introduction.ipynb  2-introduction.nblink  3-defining-jobs.ipynb  3-defining-jobs.nblink  4-creating-flows.ipynb  4-generalized-makers.ipynb  5-dynamic-flows.ipynb  6-jobflow-database.rst  6-makers.ipynb  7-fireworks.md  7-generalized-makers.ipynb  8-fireworks.md  9-missing-references.ipynb  9-pydantic-validation.ipynb
examples/: data_store.py  detours.py  encode_decode.py  encrypt_decrypt.py  fibonacci.py  linear.py  maker.py  missing_reference.py  nesting.py  prefect_example.py  replace.py  restarts.py  schema.py  vasp_alternative.py  vasp_elastic.py  vasp_simple.py  websites.txt
paper/: paper.md  refs.bib
src/activities/: __init__.py  activity.py  core.py  graph.py  maker.py  outputs.py  reference.py  task.py  util.py
src/activities/core/: __init__.py  activity.py  base.py  config.py  dict_mods.py  graph.py  job.py  maker.py  outputs.py  reference.py  schema.py  state.py  store.py  task.py  util.py
src/activities/fireworks/: workflow.py
src/activities/manager/fireworks/: firetask.py  workflow.py
src/activities/managers/: fireworks.py  local.py
src/activities/managers/fireworks/: firetask.py  workflow.py
src/activities/utils/: __init__.py  dict_mods.py  enum.py  find.py  log.py  serialization.py  uuid.py
src/flows/: __init__.py
src/flows/core/: __init__.py  flow.py  job.py  maker.py  reference.py  schema.py  state.py  store.py
src/flows/managers/: fireworks.py  local.py
src/flows/utils/: __init__.py  dict_mods.py  find.py  graph.py  log.py  uuid.py
src/jobflow/: __init__.py  _version.py  settings.py
src/jobflow/core/: __init__.py  file_store.py  flow.py  job.py  maker.py  outputs.py  reference.py  schema.py  schemas.py  state.py  store.py
src/jobflow/managers/: __init__.py  fireworks.py  local.py  myqueue.py  prefect.py  utils.py
src/jobflow/managers/local/: __init__.py  queue.py  run.py
src/jobflow/managers/myqueue_scripts/: workflow.py
src/jobflow/schemas/: job_output_schema.py  job_store.py
src/jobflow/utils/: __init__.py  dict_mods.py  enum.py  find.py  graph.py  hosts.py  log.py  serialization.py  types.py  uid.py  uuid.py
tests/: conftest.py  test_settings.py  test_uuid.py  test_version.py
tests/core/: test_activity.py  test_flow.py  test_flow_decorator.py  test_job.py  test_job_output_schema.py  test_maker.py  test_outputs.py  test_reference.py  test_schema.py  test_schemas.py  test_state.py  test_store.py  test_task.py
tests/managers/: conftest.py  test_fireworks.py  test_local.py  test_prefect.py
tests/managers/fireworks/: conftest.py  test_workflow.py
tests/test_data/: db.json  db.yaml  db_aws_prefix.json  db_bad.yaml  db_gridfs.yaml  db_serialized.json  queue_db.yaml  queue_db_serialized.json
tests/utils/: test_dict_mods.py  test_enum.py  test_find.py  test_graph.py  test_log.py  test_types.py  test_uid.py  test_uuid.py
tutorials/: 1-quickstart.ipynb  2-introduction.ipynb  3-defining-jobs.ipynb  4-generalized-makers.ipynb
