[build-system]
requires = ["setuptools >= 42", "versioningit ~= 1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobflow"
description = "jobflow is a library for writing computational workflows"
readme = "README.md"
keywords = ["high-throughput", "workflow"]
license = { text = "modified BSD" }
authors = [{ name = "Alex Ganose", email = "alexganose@gmail.com" }]
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Topic :: Other/Nonlisted Topic",
    "Topic :: Database :: Front-Ends",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.8"
dependencies = [
    "monty>=2021.5.9",
    "pydash",
    "networkx",
    "maggma>=0.38.1",
    "pydantic",
    "PyYAML",
]

[project.optional-dependencies]
docs = [
    "sphinx==6.1.3",
    "furo==2022.12.7",
    "myst_parser==1.0.0",
    "ipython==8.11.0",
    "nbsphinx==0.9.0",
    "autodoc_pydantic==1.8.0",
]
dev = ["pre-commit>=2.12.1"]
tests = ["pytest==7.2.2", "pytest-cov==4.0.0"]
vis = ["matplotlib", "pydot"]
fireworks = ["FireWorks"]
strict = [
    "monty==2022.9.9",
    "networkx==3.0",
    "pydash==6.0.2",
    "maggma==0.50.3",
    "pydantic==1.10.6",
    "PyYAML==6.0",
    "FireWorks==2.0.3",
    "matplotlib==3.7.1",
    "pydot==1.4.2",
    "moto==4.1.4",
]

[project.urls]
homepage = "https://materialsproject.github.io/jobflow/"
repository = "https://github.com/materialsproject/jobflow"
documentation = "https://materialsproject.github.io/jobflow/"
changelog = "https://github.com/materialsproject/jobflow/blob/main/CHANGELOG.md"

[tool.setuptools.package-data]
jobflow = ["py.typed"]

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.1"

[tool.flake8]
max-line-length = 88
max-doc-length = 88
select = "C, E, F, W, B"
extend-ignore = "E203, W503, E501, F401, RST21"
min-python-version = "3.8.0"
docstring-convention = "numpy"
rst-roles = "class, func, ref, obj"

[tool.mypy]
ignore_missing_imports = true
no_strict_optional = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*POTCAR.*:UserWarning",
    "ignore:.*magmom.*:UserWarning",
    "ignore:.*is not gzipped.*:UserWarning",
    "ignore:.*input structure.*:UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
include = ["src/*"]
parallel = true
branch = true

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_lines = [
    '^\s*assert False(,|$)',
    'if typing.TYPE_CHECKING:',
    '^\s*@overload( |$)',
]

[tool.ruff]
target-version = "py38"
ignore-init-module-imports = true
select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "PLE", # pylint error
    "PLW", # pylint warning
    "Q",   # flake8-quotes
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "TID", # tidy imports
    "UP",  # pyupgrade
    "W",   # pycodestyle
    "YTT", # flake8-2020
]
pydocstyle.convention = "numpy"
isort.known-first-party = ["jobflow"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"**/tests/*" = ["D"]
