[build-system]
requires = ["setuptools >= 42", "versioningit ~= 1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobflow"
description = "jobflow is a library for writing computational workflows"
readme = "README.md"
keywords = ["high-throughput", "workflow"]
license = { text = "modified BSD" }
authors = [{ name = "Alex Ganose", email = "alexganose@gmail.com" }]
dynamic = ["version"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Database :: Front-Ends",
    "Topic :: Other/Nonlisted Topic",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.8"
dependencies = [
    "PyYAML",
    "maggma>=0.38.1",
    "monty>=2021.5.9",
    "networkx",
    "pydantic",
    "pydash",
]

[project.optional-dependencies]
docs = [
    "autodoc_pydantic==1.9.0",
    "furo==2023.7.26",
    "ipython==8.14.0",
    "myst_parser==2.0.0",
    "nbsphinx==0.9.2",
    "sphinx-copybutton==0.5.2",
    "sphinx==7.1.2",
]
dev = ["pre-commit>=2.12.1"]
tests = ["pytest-cov==4.1.0", "pytest==7.4.0"]
vis = ["matplotlib", "pydot"]
fireworks = ["FireWorks"]
strict = [
    "FireWorks==2.0.3",
    "PyYAML==6.0.1",
    "maggma==0.53.0",
    "matplotlib==3.7.2",
    "monty==2023.8.8",
    "moto==4.1.14",
    "networkx==3.1",
    "pydantic==1.10.9",
    "pydash==7.0.6",
    "pydot==1.4.2",
    "typing-extensions==4.7.1",
]

[project.urls]
homepage = "https://materialsproject.github.io/jobflow/"
repository = "https://github.com/materialsproject/jobflow"
documentation = "https://materialsproject.github.io/jobflow/"
changelog = "https://github.com/materialsproject/jobflow/blob/main/CHANGELOG.md"

[tool.setuptools.package-data]
jobflow = ["py.typed"]

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.1"

[tool.flake8]
max-line-length = 88
max-doc-length = 88
select = "C, E, F, W, B"
extend-ignore = "E203, W503, E501, F401, RST21"
min-python-version = "3.8.0"
docstring-convention = "numpy"
rst-roles = "class, func, ref, obj"

[tool.mypy]
ignore_missing_imports = true
no_strict_optional = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*POTCAR.*:UserWarning",
    "ignore:.*input structure.*:UserWarning",
    "ignore:.*is not gzipped.*:UserWarning",
    "ignore:.*magmom.*:UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
include = ["src/*"]
parallel = true
branch = true

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_lines = [
    '^\s*@overload( |$)',
    '^\s*assert False(,|$)',
    'if TYPE_CHECKING:',
    'if typing.TYPE_CHECKING:',
]

[tool.ruff]
target-version = "py38"
ignore-init-module-imports = true
select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "PLE", # pylint error
    "PLW", # pylint warning
    "Q",   # flake8-quotes
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "TID", # tidy imports
    "UP",  # pyupgrade
    "W",   # pycodestyle
    "YTT", # flake8-2020
]
ignore = ["B028", "PLW0603", "RUF013"]
pydocstyle.convention = "numpy"
isort.known-first-party = ["jobflow"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"**/tests/*" = ["D"]
